--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
                     style="width: 36px;" alt="avatar"> Movie
                 Discovery
             </h1>
-            <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">
-                <span class="toggle-icon">🌙</span>
-            </button>
+            <div class="header-actions">
+                <a href="https://wayground.com/join/game/U2FsdGVkX18l3cWTSBAm51klTQukWUDqRRhpDsqYQqNobU2RJj2gcwT9pkcyhqTBcMsxZPs9IGuBHmVSpWtnCw%253D%253D?page=summary"
+                    target="_blank" class="link-bai-tap">Bài Tập 30</a>
+                <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">
+                    <span class="toggle-icon">🌙</span>
+                </button>
+            </div>
         </div>
     </header>
 
